--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,17 @@
   <body>
 
     <div class="container">
-      <ul class="nav nav-tabs">
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "About", about_path %></li>
-      </ul>
+      <% if user_signed_in? %>
+        <ul class="nav nav-tabs">
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "About", about_path %></li>
+          <div class="pull-right user-info">
+            Signed in as: <strong><%= current_user.email %></strong> |
+            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> -
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link' %>
+          </div>
+        </ul>
+      <% end %>
 
       <div class="flash">
         <% if flash[:notice] %>
