--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
-<h1><%= @user.nickname %></h1>
+<h1><%= @user.nickname %><small> - <%= @user.role %> user</small></h1>
 <p>??<%= link_to 'Edit profile', edit_user_registration_path %>:
   signed in as <%= current_user.email %>.</p>
