--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,10 +3,30 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="field">
+        <%= f.label :email, 'E-mail:' %><br />
+        <%= f.email_field :email, autofocus: true %>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="field">
+        <%= f.label :fullname, 'Full Name:' %><br />
+        <%= f.text_field :fullname %>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="field">
+        <%= f.label :phone, 'Phone Number:' %><br />
+        <%= f.text_field :phone %>
+      </div>
+    </div>
   </div>
+
+  <hr/>
+
+  <h3>Set a password:</h3>
 
   <div class="field">
     <%= f.label :password %>
@@ -25,5 +45,3 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
