--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <% if user_signed_in? %>
           <li><%= link_to "Home", root_path %></li>
           <% if current_user.admin? %>
-            <li><%= link_to "Admin", "/admin" %></li>
+            <li><%= link_to "Admin", "/admin", data: { 'no-turbolink' => true } %></li>
           <% end %>
         <% else %>
           <li><%= link_to "Sign In", root_path %></li>
