--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <% if user_signed_in? %>
           <li><%= link_to "Home", root_path %></li>
           <% if current_user.admin? %>
+            <li><%= link_to "Users", users_path %>
             <li><%= link_to "Admin", "/admin", data: { 'no-turbolink' => true } %></li>
           <% end %>
         <% else %>
