--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,24 @@
  .nav {
  margin-top: 5px;
  }
+
+ .inactive-header {
+   color: #9cc;
+   text-align: right;
+ }
+
+ .user-table {
+   font-size: 150%;
+   text-align: right;
+ }
+
+ .user-table td {
+   padding: 10px;
+   border-top: 1px solid #ccc;
+ }
+
+ .user-table .user-role {
+   text-align: center;
+   font-size: 60%;
+   color: #999;
+ }
