--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,41 @@
 <div class="row">
-  <div class="col-md-6">
-    <h2>Approved Current Users:</h2>
-    <ul>
-      <% @users.where(approved: true).each do |user| %>
-        <li><%= link_to user.nickname, edit_user_path(user.id) %></li>
+  <div class="col-md-7">
+    <h2>Edit Approved Current Users:</h2>
+    <table class="user-table">
+      <% @users.where(approved: true).each do |approved| %>
+        <tr>
+          <td><%= link_to approved.nickname, edit_user_path(approved) %></td>
+          <td class="user-role"><%= approved.role %></td>
+          <td><%= form_for approved do |t| %>
+            <%= t.hidden_field :approved, :value => false %>
+            <%= t.submit "Suspend", class: 'btn btn-warning' %>
+            <% end %>
+          </td>
+          <td><%= link_to "Delete", admin_destroy_user_path(approved), method: :delete, class: 'btn btn-danger',
+            data: { confirm: "Are you sure you want to remove this user from the system?" } %></td>
+        </tr>
       <% end %>
-    </ul>
+    </table>
   </div>
-  <div class="col-md-6">
-    <h2>Waiting to be approved:</h2>
-    <ul>
-      <% @users.where(approved: false).each do |user| %>
-        <li><%= user %></li>
-        <li>
-          <%= user.fullname %> -
-          <%= link_to "Approve", '#', class: 'btn btn-success' %>
-          <%= link_to "Delete", '#', method: :delete, class: 'btn btn-danger',
-            data: { confirm: "Are you sure you want to remove this unapproved user?" } %>
-        </li>
-      <% end %>
-    </ul>
+  <div class="col-md-5">
+    <% if @users.where(approved: false).count == 0 %>
+      <h2 class="inactive-header">All Approved!</h2>
+    <% else %>
+      <h2>Waiting to be approved:</h2>
+      <table class="user-table">
+        <% @users.where(approved: false).each do |notapproved| %>
+          <tr>
+            <td><%= notapproved.fullname %>:</td>
+            <td><%= form_for notapproved do |t| %>
+              <%= t.hidden_field :approved, :value => true %>
+              <%= t.submit "Approve", class: 'btn btn-success' %>
+              <% end %>
+            </td>
+            <td><%= link_to "Delete", admin_destroy_user_path(notapproved), method: :delete, class: 'btn btn-danger',
+              data: { confirm: "Are you sure you want to remove this unapproved user?" } %></td>
+          </tr>
+        <% end %>
+      </table>
+    <% end %>
   </div>
 </div>
