--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
       <ul class="nav nav-tabs">
         <% if user_signed_in? %>
           <li><%= link_to "Home", root_path %></li>
-          <% if current_user.admin? %>
+          <% if policy(User).index? %>
             <li><%= link_to new_users?, users_path %></li>
-            <li><%= link_to "Admin", "/admin", data: { 'no-turbolink' => true } %></li>
+            <li><%= link_to "(Administrate gem)", "/admin", data: { 'no-turbolink' => true } %></li>
           <% end %>
         <% else %>
           <li><%= link_to "Sign In", root_path %></li>
