About additions and seeds.rb

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -11,4 +11,63 @@ Caroline Courtney</a>.</p>
 
 <h3>There's GOT to be a <em>better way!</em></h3>
 
-<p>...and there is.  And here is it's 'about page'.
+<p>...and there is.  And here is it's 'about page'.  Until robots learn
+  how to do this job, here's some softwherez to make it relatively painless
+  for humans.  No autodailers or extra crazy crap you don't need.  Just you
+  and the leads.  Balls to the wall, fingers to the phone!  Plus, we still
+  might save a tree or two, and some of the office management's collective
+  sanity.  You don't want those guys going off.
+</p>
+
+<hr/>
+
+<h3>Users and roles</h3>
+
+<p>
+  Start by registerring with your email and whatnot.  Please keep your own
+  contact info current (via the
+  '<%= link_to 'Edit profile', edit_user_registration_path %>' function)
+  because we might occasionally make announcements based
+  on your contact information and preferences.  Things like, "work cancelled
+  tonight due to trumpocalypse", and the like.  And you'd hate to be the only
+  fool waiting for the doors to open up after missing the message.
+</p>
+
+<p>
+  After you are approved by an admin, you can log in and start accessing info.
+  Here's what you can do, based on user role; if you can't do it, don't worry
+  about it!
+</p>
+
+<div class="row">
+  <div class="col-md-4">
+    <h4>Standard</h4>
+    <p>
+      You guessed it, standard stuff.  Pick a project, start dialing things.
+      Maybe it's disconnected, maybe its a sale!  Seriously, mark it.
+      Maybe you get told where you can go.  You also have quick access to
+      all your callbacks and can
+      run thru those until they tell you to stop.
+    </p>
+  </div>
+  <div class="col-md-4">
+    <h4>Manager</h4>
+    <p>
+      The exhaulted ranks of... getting to answer the phone.  So when people
+      call back in, you can go search and find them.  And maybe a few other
+      things.  Plus, all the typical standard functionality what's over to the
+      left!  Yeah.  Good stuff right there.
+    </p>
+  </div>
+  <div class="col-md-4">
+    <h4>Admin</h4>
+    <p>
+      Heavy is the head that wears the crown.  The admin is the 'man behind the
+      curtain' so to speak, that puts all your leads in here!  Plus all the
+      standard and manager stuff.  And now each of the 3 columns are the same
+      number of lines. I mean, just as a side note.
+    </p>
+  </div>
+</div>
+
+<hr/>
