--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Campaigns#show</h1>
-<p>Find me in app/views/campaigns/show.html.erb</p>
+<h1><%= @campaign.name %><span class="year"><%= @campaign.year %></span></h1>
+<p>Code: <%= @campaign.code %>, Callback #: <%= @campaign.callback_phone %>,
+  Available: <%= @campaign.available %></p>
+<p><%= @campaign.notes %></p>
