Can update and delete campaigns

--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,11 +1,18 @@
 <h1>Available Campaigns:</h1>
 
-<% Campaign.where(available: true).each do |campaign| %>
-  <h3><%= link_to campaign.name, campaign %><span class="year"><%= campaign.year %></span></h3>
-<% end %>
+<div class="row">
+  <div class="col-md-8">
+    <% Campaign.where(available: true).each do |campaign| %>
+      <h3><%= link_to campaign.name, campaign %><span class="year"><%= campaign.year %></span></h3>
+    <% end %>
 
-<h1>Suspended Campaigns:</h1>
+    <h1>Suspended Campaigns:</h1>
 
-<% Campaign.where(available: false).each do |campaign| %>
-  <h3><%= link_to campaign.name, campaign %><span class="year"><%= campaign.year %></span></h3>
-<% end %>
+    <% Campaign.where(available: false).each do |campaign| %>
+      <h3><%= link_to campaign.name, campaign %><span class="year"><%= campaign.year %></span></h3>
+    <% end %>
+  </div>
+  <div class="col-md-4">
+    <%= link_to "New Campaign", new_campaign_path, class: 'btn btn-primary' %>
+  </div>
+</div>
