--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,4 +1,13 @@
 <h1><%= @campaign.name %><span class="year"><%= @campaign.year %></span></h1>
-<p>Code: <%= @campaign.code %>, Callback #: <%= @campaign.callback_phone %>,
-  Available: <%= @campaign.available %></p>
-<p><%= @campaign.notes %></p>
+
+<div class="row">
+  <div class="col-md-8">
+    <p>Code: <%= @campaign.code %>, Callback #: <%= @campaign.callback_phone %>,
+      Available: <%= @campaign.available %></p>
+    <p><%= @campaign.notes %></p>
+  </div>
+  <div class="col-md-4">
+    <%= link_to "Edit", edit_campaign_path(@campaign), class: 'btn btn-success' %>
+    <%= link_to "Delete Campaign", @campaign, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this campaign?'} %>
+  </div>
+</div>
