--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -7,7 +7,12 @@
     <p><%= @campaign.notes %></p>
   </div>
   <div class="col-md-4">
-    <%= link_to "Edit", edit_campaign_path(@campaign), class: 'btn btn-success' %>
-    <%= link_to "Delete Campaign", @campaign, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this campaign?'} %>
+    <% if policy(Campaign).edit? %>
+      <h3>Add Leads</h3>
+      ...
+      <h3>Edit this Campaign</h3>
+      <%= link_to "Update", edit_campaign_path(@campaign), class: 'btn btn-success' %>
+      <%= link_to "Delete", @campaign, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this campaign?'} %>
+    <% end %>
   </div>
 </div>
