Custom google fonts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,8 +29,13 @@
    font-family: 'Lora', serif;
  }
 
+ nav {
+   font-family: 'Varela Round', sans-serif;
+ }
+
  .btn {
-   font-family: 'Shadows Into Light', cursive;
+   font-family: 'Poiret One', cursive;
+   font-weight: bold;
  }
 
  .user-info {
