Lead model basics and Campaign referenced

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -43,9 +43,8 @@ Caroline Courtney</a>.</p>
   <div class="col-md-4">
     <h4>Standard</h4>
     <p>
-      You guessed it, standard stuff.  Pick a project, start dialing things.
-      Maybe it's disconnected, maybe its a sale!  Seriously, mark it.
-      Maybe you get told where you can go.  You also have quick access to
+      Pick a project, start dialing things.  Mark things as you go.
+      You also have quick access to
       all your callbacks and can
       run thru those until they tell you to stop.
     </p>
@@ -54,9 +53,8 @@ Caroline Courtney</a>.</p>
     <h4>Manager</h4>
     <p>
       The exhaulted ranks of... getting to answer the phone.  So when people
-      call back in, you can go search and find them.  And maybe a few other
-      things.  Plus, all the typical standard functionality what's over to the
-      left!  Yeah.  Good stuff right there.
+      call back in, you can go search and find them.  Plus all the standard
+      thingies.
     </p>
   </div>
   <div class="col-md-4">
@@ -64,9 +62,7 @@ Caroline Courtney</a>.</p>
     <p>
       Heavy is the head that wears the crown.  The admin is the 'man behind the
       curtain' so to speak, that puts all your leads in here!  Plus all the
-      standard and manager stuff.  And now each of the 3 columns are the same
-      number of lines. I mean, just as a side note.
-    </p>
+      standard and manager stuff.
   </div>
 </div>
 
