--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -4,6 +4,14 @@
   <div class="col-md-8">
     <p>Code: <%= @campaign.code %>, Callback #: <%= @campaign.callback_phone %>,
       Available: <%= @campaign.available %></p>
+    <h2>Total Leads: <%= Lead.where(campaign_id: @campaign.id).count %></h2>
+    <ul>
+      <% Lead.where(campaign_id: @campaign.id).uniq.pluck(:source_code).each do |code| %>
+        <li><%= code %>: <%= Lead.where(campaign_id: @campaign.id, source_code: code).count %></li>
+      <% end %>
+    </ul>
+
+    <h3>Latest Notes:</h3>
     <p><%= @campaign.notes %></p>
   </div>
   <div class="col-md-4">
