--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -4,12 +4,17 @@
   <div class="col-md-8">
     <p>Code: <%= @campaign.code %>, Callback #: <%= @campaign.callback_phone %>,
       Available: <%= @campaign.available %></p>
-    <h2>Total Leads: <%= Lead.where(campaign_id: @campaign.id).count %></h2>
-    <ul>
-      <% Lead.where(campaign_id: @campaign.id).uniq.pluck(:source_code).each do |code| %>
-        <li><%= code %>: <%= Lead.where(campaign_id: @campaign.id, source_code: code).count %></li>
-      <% end %>
-    </ul>
+    <% if Lead.where(campaign_id: @campaign.id).count == 0 %>
+      <h2>No leads yet.</h2>
+    <% else %>
+      <h2><%= link_to "Total Leads", lead_path(Lead.where(campaign_id: @campaign).sample) %>: <%= Lead.where(campaign_id: @campaign.id).count %></h2>
+      <ul>
+        <% Lead.where(campaign_id: @campaign.id).uniq.pluck(:source_code).each do |code| %>
+          <li><%= link_to code, lead_path(Lead.where(campaign_id: @campaign, source_code: code).sample) %>: <%= Lead.where(campaign_id: @campaign.id, source_code: code).count %></li>
+        <% end %>
+      </ul>
+      <p>(leads are randomly <code>sampled</code> for now.)</p>
+    <% end %>
 
     <h3>Latest Notes:</h3>
     <p><%= @campaign.notes %></p>
