--- a/app/assets/stylesheets/campaigns.scss
+++ b/app/assets/stylesheets/campaigns.scss
@@ -7,3 +7,9 @@
   font-size: 60%;
   color: #999;
 }
+
+.lead-breakdown td {
+  border-top: 1px solid #ccc;
+  font-size: 120%;
+  padding: 5px 10px 5px 5px;
+}
