--- a/app/views/campaigns/_lead_breakdown.html.erb
+++ b/app/views/campaigns/_lead_breakdown.html.erb
@@ -1,10 +1,10 @@
 <table class="lead-breakdown">
-  <tr><th>Source</th><th># leads</th><th>ave x dialed</th></tr>
+  <tr><th>Source</th><th># leads</th><th>ave x dialed thru</th></tr>
   <% sources(@campaign).each do |code| %>
     <tr>
-      <td><%= link_to code, lead_path(Lead.where(campaign_id: @campaign, source_code: code).sample) %>:</td>
+      <td><%= link_to code, lead_path(all_leads(@campaign, code).first) %>:</td>
       <td><%= amt_leads(@campaign, code) %></td>
-      <td>--</td>
+      <td><%= all_leads(@campaign, code).average(:dial_count).floor %></td>
     </tr>
   <% end %>
 </table>
