--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -2,12 +2,10 @@
 
 <div class="row">
   <div class="col-md-8">
-    <!--<p>Code: <%= @campaign.code %>, Callback #: <%= @campaign.callback_phone %>,
-      Available: <%= @campaign.available %></p>-->
     <% if amt_leads(@campaign) == 0 %>
       <h2>No leads yet.</h2>
     <% else %>
-      <h2><%= link_to "Total Leads", lead_path(all_leads(@campaign).first) %>:
+      <h2><%= link_to "Total Leads", campaign_lead_path(@campaign, all_leads(@campaign).first) %>:
         <%= amt_leads(@campaign) %></h2>
         <p>Dialed through an avarage of
         <%= all_leads(@campaign).average(:dial_count).floor %> times.</p>
