Mentor Help from Friday 4/29

--- a/app/views/leads/index.html.erb
+++ b/app/views/leads/index.html.erb
@@ -1,6 +1,7 @@
 <h1>All Leads</h1>
 <ul>
   <% @leads.each do |lead| %>
-    <li><%= link_to lead.name1, lead_path(lead) %></li>
+    <li><%= link_to lead.name1, '#' %>:
+      <%= lead.campaign_name %>, <%= lead.source_code %></li>
   <% end %>
 </ul>
