--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
    font-family: 'Varela Round', sans-serif;
  }
 
- h1, h2, h3, h4, h5, h6 {
+ h1, h2, h3, h4, h5, h6, h1 * {
    font-family: 'Ubuntu', sans-serif;
  }
 
