--- a/app/views/campaigns/_lead_breakdown.html.erb
+++ b/app/views/campaigns/_lead_breakdown.html.erb
@@ -1,8 +1,8 @@
 <table class="lead-breakdown">
-  <tr><th>Source</th><th># leads</th><th>ave x dialed thru</th></tr>
+  <tr><th>Source</th><th># leads</th><th>x dialed</th></tr>
   <% sources(@campaign).each do |code| %>
     <tr>
-      <td><%= link_to code, campaign_lead_path(@campaign, all_leads(@campaign, code).first, source_code: code) %>:</td>
+      <td><%= link_to code, campaign_lead_path(@campaign, all_leads(@campaign, code).first) %>:</td>
       <td><%= amt_leads(@campaign, code) %></td>
       <td><%= all_leads(@campaign, code).average(:dial_count).floor %></td>
     </tr>
