--- a/app/views/leads/index.html.erb
+++ b/app/views/leads/index.html.erb
@@ -1,7 +1,8 @@
-<h1>All Leads</h1>
+<h1>All Leads: <%= @campaign.name %></h1>
 <ul>
   <% @leads.each do |lead| %>
-    <li><%= link_to lead.name1, '#' %>:
-      <%= lead.campaign_name %>, <%= lead.source_code %></li>
+    <li><%= link_to lead.name1, campaign_lead_path(@campaign, lead) %>: &nbsp; <%= lead.phone1 if lead.phone1 %>
+     &nbsp; <%= lead.phone2 if lead.phone2 %>
+     &nbsp; <%= lead.phone3 if lead.phone3 %></li>
   <% end %>
 </ul>
