--- a/app/views/leads/index.html.erb
+++ b/app/views/leads/index.html.erb
@@ -1,4 +1,4 @@
-<h1>All Leads: <%= @campaign.name %></h1>
+<h1>All Leads: <%= link_to @campaign.name, campaign_path(@campaign) %></h1>
 <ul>
   <% @leads.each do |lead| %>
     <li><%= link_to lead.name1, campaign_lead_path(@campaign, lead) %>: &nbsp; <%= lead.phone1 if lead.phone1 %>
