--- a/app/views/leads/show.html.erb
+++ b/app/views/leads/show.html.erb
@@ -48,7 +48,7 @@
       <h3 class="killed">Killed</h3>
     <% else %>
       <h3>lead actions</h3>
-      <%= form_for campaign_lead_path, method: :patch do |f| %>
+      <%= form_for [@campaign, @lead], method: :patch do |f| %>
         <%= f.hidden_field :killed, :value => true %>
         <%= f.submit "Kill", class: 'btn btn-danger' %>
       <% end %>
