--- a/app/views/campaigns/_lead_breakdown.html.erb
+++ b/app/views/campaigns/_lead_breakdown.html.erb
@@ -7,4 +7,11 @@
       <td><%= all_leads(@campaign, code).average(:dial_count).floor %></td>
     </tr>
   <% end %>
+  <% if amt_day_leads(@campaign) > 0 %>
+    <tr>
+      <td><%= link_to "Day Leads", campaign_lead_path(@campaign, all_day_leads(@campaign).first) %>:</td>
+      <td><%= amt_day_leads(@campaign) %></td>
+      <td><%= all_day_leads(@campaign).average(:dial_count).floor %></td>
+    </tr>
+  <% end %>
 </table>
