Refactor lead model and show view

--- a/app/assets/stylesheets/leads.scss
+++ b/app/assets/stylesheets/leads.scss
@@ -39,8 +39,10 @@
 
 .lead-contact {
   font-size: 150%;
-  line-height: 1.5em;
-  margin: 10px 5px;
+}
+
+.lead-contact p {
+  margin: 5px;
 }
 
 .lead-title p {
