--- a/app/views/leads/_lead_actions.html.erb
+++ b/app/views/leads/_lead_actions.html.erb
@@ -1,10 +1,10 @@
-<% if !(lead.killed?) %>
+<% unless lead.killed? %>
   <%= form_for [campaign, lead], method: :patch do |f| %>
     <%= f.hidden_field :killed, :value => true %>
     <%= f.submit "Kill", class: 'btn btn-danger' %>
   <% end %>
 <% end %>
-<% if !(lead.day_lead?) %>
+<% unless lead.day_lead? %>
   <%= form_for [campaign, lead], method: :patch do |f| %>
     <%= f.hidden_field :day_lead, :value => true %>
     <%= f.submit "Day Lead", class: 'btn btn-warning' %>
