--- a/app/views/leads/show.html.erb
+++ b/app/views/leads/show.html.erb
@@ -67,14 +67,8 @@
     <h3>callback stuff</h3>
   </div>
   <div class="col-md-4">
-    <% if @lead.day_lead? %>
-    <%= link_to "Day Leads | Next Lead >>",
-      campaign_lead_path(@campaign, @campaign.next_lead('day')),
+    <%= link_to "#{next_lead_button(@lead)} | Next Lead >>",
+      campaign_lead_path(@campaign, @campaign.next_lead(@lead)),
       class: 'btn btn-success btn-lg' %>
-    <% else %>
-      <%= link_to "#{@lead.source_code} | Next Lead >>",
-        campaign_lead_path(@campaign, @campaign.next_lead(@lead.source_code)),
-        class: 'btn btn-success btn-lg' %>
-      <% end %>
   </div>
 </div>
