--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,3 +3,17 @@
   <%= link_to 'Edit profile', edit_user_registration_path %>:
   <%= @user.fullname %>: <%= @user.phone %> | <%= @user.email %>
 </p>
+
+<h2>Search Leads</h2>
+
+<h3>by Name:</h3>
+<%= form_tag search_results_index_path, method: :get do %>
+  <%= text_field_tag :name_query, params[:name_query] %>
+  <%= submit_tag "GO", name: nil %>
+<% end %>
+
+<h3>by Phone:</h3>
+<%= form_tag search_results_index_path, method: :get do %>
+  <%= text_field_tag :phone_query, params[:phone_query] %>
+  <%= submit_tag "GO", name: nil %>
+<% end %>
